<resources>
    <string name="app_name">Parking ORG</string>
    <string name="Acceso_visita">Acceso visitantes</string>
    <string name="parking_organization">PARKING ORGANIZATION</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="Login">Iniciar sesión</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="llave_de_acceso">Llave de acceso</string>
    <string name="com_auth0_domain">dev-x5hctivk0wln8niq.us.auth0.com</string>
    <string name="com_auth0_client_id">ErVq5o8HzUTXtEdw2KzVaYl5lelE3EkD</string>
    <string name="pin_de_acceso">PIN de acceso</string>
    <string name="ingrese_su_pin">Ingrese su PIN</string>
    <string name="devolverse">Devolverse</string>
    <string name="personaliza_tu_tarjeta_de_ingreso">Personaliza tu tarjeta de ingreso</string>
    <string name="confirmar">Confirmar</string>
    <string name="tarjeta_de_ingreso">Tarjeta de ingreso</string>
    <string name="historial">Historial</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="a_adir">Añadir</string>
    <string name="gestionar">Gestionar</string>
    <string name="opciones_de_gesti_n">Opciones de gestión</string>
    <string name="eliminar_veh_culo">Eliminar vehículo</string>
    <string name="cerrar">Cerrar</string>
    <string name="a_adir_veh_culo">Añadir vehículo</string>
    <string name="registrar_vehiculo">Registrar vehículo</string>
    <string name="informaci_n_del_vehiculo">Información del vehículo</string>
    <string name="matricula_del_vehiculo">Matrícula del vehículo</string>
    <string name="marca_del_vehiculo">Marca del vehículo</string>
    <string name="modelo_del_vehiculo">Modelo del vehículo</string>
    <string name="color_del_vehiculo">Color del vehículo</string>
    <string name="confirmar_registro">Confirmar registro</string>
    <string name="tipo_de_veh_culo">Tipo de vehículo</string>
    <string name="empty_plate">--- ---</string>
    <string name="elige_un_vehiculo">Elige un vehículo</string>
    <string name="personalizar_tarjeta">Personalizar tarjeta</string>
    <string name="generar_codigo_de_invitaci_n">Generar código de invitación</string>
    <string name="modificar_cuenta">Modificar cuenta</string>
    <string name="cerrar_secci_n">Cerrar sesión</string>
    <string name="modo_escaner">Modo escáner</string>
    <string name="configuraci_n">Configuración</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="Ask_door">¿Qué puerta se está administrando?</string>
    <string name="historial_de_acceso">Historial de acceso</string>
    <string name="hora">Hora</string>
    <string name="d_a">Día</string>
    <string name="a_o">Año</string>
    <string name="direcci_n">Dirección</string>
    <string name="ticket_de_acceso">Ticket de acceso</string>
    <string name="eliminar_registro">Eliminar registro</string>
    <string name="ingreso">Ingreso ›</string>
    <string name="codigo_de_invitaci_n">Codigo de invitación</string>
    <string name="sin_registro">Sin vehículo asignado</string>
    <string name="tipo_de_acceso">Tipo de acceso</string>
    <string name="propietario">Propietario</string>
</resources>