<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="2dp"
    android:layout_margin="8dp"
    android:background="@drawable/bordered_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_card"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo_tipo_direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingreso"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/alata"
            android:layout_alignParentStart="true"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/btn_cerrar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/x_circle"
            android:fontFamily="@font/alata"
            android:contentDescription="Cerrar"
            android:layout_marginEnd="4dp" />

        <!-- Contenido -->
        <LinearLayout
            android:id="@+id/contenido_detalle"
            android:orientation="vertical"
            android:layout_below="@id/titulo_tipo_direct"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hora"
                android:fontFamily="@font/alata"
                android:textSize="12sp"
                android:textColor="#888888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_hora"
                android:text="8:00:00 p.m"
                android:fontFamily="@font/akshar"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:text="@string/d_a"
                android:fontFamily="@font/alata"
                android:textSize="12sp"
                android:textColor="#888888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/akshar"
                android:text="26 de febrero"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/a_o"
                android:textSize="12sp"
                android:fontFamily="@font/alata"
                android:textColor="#888888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_anio"
                android:text="2025"
                android:textSize="20sp"
                android:textColor="#000000"
                android:fontFamily="@font/akshar"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:text="@string/direcci_n"
                android:fontFamily="@font/alata"
                android:textSize="12sp"
                android:textColor="#888888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_direccion"
                android:text="Entrada"
                android:fontFamily="@font/akshar"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:text="@string/ticket_de_acceso"
                android:fontFamily="@font/alata"
                android:textSize="12sp"
                android:textColor="#888888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_ticket"
                android:text="M4XCH4MP20S4"
                android:fontFamily="@font/akshar"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                android:text="@string/tipo_de_acceso"
                android:fontFamily="@font/alata"
                android:textSize="12sp"
                android:textColor="#888888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/typeaccess"
                android:text="@string/propietario"
                android:fontFamily="@font/akshar"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/btn_eliminar"
                android:text="@string/eliminar_registro"
                android:fontFamily="@font/alata"
                android:textColor="#B71C1C"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
