<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="603dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="15dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmarRegistroButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/Datos_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/informaci_n_del_vehiculo"
                android:textColor="@color/Negro" />

            <EditText
                android:id="@+id/Matricula_vehiculo"
                android:layout_width="353dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bordecolor"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/matricula_del_vehiculo"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/Marca_vehiculo"
                android:layout_width="353dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordecolor"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/marca_del_vehiculo"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/Modelo_vehiculo"
                android:layout_width="353dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordecolor"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/modelo_del_vehiculo"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/Color_vehiculo"
                android:layout_width="353dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordecolor"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/color_del_vehiculo"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tipo_vehiculo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tipo_de_veh_culo"
                android:textColor="@color/Negro"
                android:fontFamily="@font/inter_semibold" />

            <Spinner
                android:id="@+id/spinner_tipo_vehiculo"
                android:layout_width="353dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/bordecolor"
                android:padding="12dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/confirmarRegistroButton"
        android:layout_width="270dp"
        android:layout_height="79dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Empresarial"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/confirmar_registro"
        android:textAllCaps="false"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Registrar_vehiculo_title"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:fontFamily="@font/alata"
        android:text="@string/registrar_vehiculo"
        android:textColor="@color/Negro"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/backarrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <ImageView
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        app:srcCompat="@drawable/arrow_left_circle"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>