<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
        <LinearLayout
            android:id="@+id/notificacion_emergente"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/rounded_dialog_bg"
            android:padding="24dp"
            android:elevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gestión de vehículos"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="center" />

            <ScrollView
                android:id="@+id/scroll_vehiculos"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/contenedor_vehiculos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <Button
                android:id="@+id/boton_añadir_vehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/a_adir_veh_culo"
                android:layout_marginTop="12dp" />

            <Button
                android:id="@+id/boton_eliminar_vehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/eliminar_veh_culo"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/boton_cerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:backgroundTint="@color/Blanco"
                android:text="@string/cerrar"
                android:layout_gravity="center"
                android:layout_marginTop="26dp" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>